--- a/.github/workflows/gemini.yml
+++ b/.github/workflows/gemini.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Summarize changes
-        uses: google-github-actions/run-gemini-cli@v1
+        uses: google-github-actions/run-gemini-cli@main
         with:
           command: 'summarize'
           project: 'gen-lang-client-0247456501' # Replace with your Google Cloud project ID
