--- a/.github/workflows/gemini.yml
+++ b/.github/workflows/gemini.yml
@@ -1,24 +1,21 @@
 name: Gemini AI Code Review
-
 on:
-
-pull_request:
-      types: [opened, synchronize]
-   
+ pull_request:
+   types:
+      - opened
+      - synchronize
 jobs:
-    code-review:
-        runs-on: ubuntu-latest
-        steps:
-          - name: Checkout code
-            uses: actions/checkout@v3
-   
-          - name: Summarize changes
-            uses: google-github-actions/run-gemini-cli@v0
-            with:
-              command: 'summarize'
-              project: 'gen-lang-client-0247456501' # Replace with your Google Cloud project ID
-              region: 'us-central1' # Replace with your desired region
-            env:
-              GEMINI_API_KEY: \${{ secrets.GEMINI_API_KEY }} 
-
-
+ code-review:
+   runs-on: ubuntu-latest
+   steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Summarize changes
+        uses: google-github-actions/run-gemini-cli@v0
+        with:
+           command: summarize
+           project: gen-lang-client-0247456501
+           region: us-central1
+        env:
+           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+  
