--- a/.github/workflows/gemini.yml
+++ b/.github/workflows/gemini.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Summarize changes
-        uses: google-github-actions/run-gemini-cli@vo
+        uses: google-github-actions/run-gemini-cli@v0
         with:
           command: 'summarize'
-          project: 'gen-lang-client-0247456501' # Replace with your Google Cloud project ID
+          project: 'practical-bebop-469013-t3' # Replace with your Google Cloud project ID
           region: 'us-central1' # Replace with your desired region
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
